# ACode

./: .gitignore  .pnpmfile.cjs  ATTRIBUTION.md  CHANGES_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  New_feature.md  README.md  dalam.md  fix_catches.py  lint_issues_report.md  package.json  pnpm-lock.yaml  turbo.json
.mimocode/: .cron-lock
.mimocode/command/: tauri-build.md  verify.md
.mimocode/plans/: 1782473013978-tidy-planet.md  1782802911819-nimble-circuit.md  1783183445063-neon-wolf.md  1783192902318-playful-wolf.md  1783279971405-nimble-squid.md  1784223340273-stellar-comet.md  deep-scan-improvements.md  tailwind-v4-migration.md
.qwen/skills/auto-skill-acode-newtask-ui/: SKILL.md
.qwen/skills/auto-skill-acode-panel-resize/: SKILL.md
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: git.rs  lib.rs  system.rs
apps/desktop/src/renderer/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/desktop/src/renderer/lib/: acodeAPI.ts  agents.ts  (+65 more)
improvement-plan/: 00-critical-bugs.md  01-agent-runtime-contract.md  02-tool-calling.md  03-context-management.md  04-memory-system.md  05-dream-agent.md  06-session-management.md  07-ui-desktop.md  08-security.md  09-self-improving.md  10-mcp-connectors.md  11-cross-os.md  12-performance.md  13-missing-features.md  14-testing.md  15-configuration.md  16-rust-backend.md  README.md
scripts/: add_doom_loop_indicator.py  apply_session_changes.py
(+105 files in other folders)
